--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "radium": "^0.26.2",
     "react": "^17.0.2",
+    "react-animated-cursor": "^2.5.1",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.1",
